PaperMixin - initial commit of changes from template - also add pathfinding stuff

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-group=com.example
-version=1.0.0-SNAPSHOT
-description=Example mod for Ignite
+group=com.shanebeestudios
+version=1.0.0
+description=Patch mod for debug system
 
 org.gradle.parallel=true
